test-models/src/main/pegasus/com/datahub/test/invalid/MissingSearchableFieldType.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record MissingSearchableFieldType {
  @Searchable = {
    "fieldName": "textField"
  }
  textField: string
}